--- a/test/index.html
+++ b/test/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IndexedDB test suite</title>
+    <title>IndexedDB test runner</title>
     <script type="text/javascript" src="test_runner.bc.js"></script>
   </head>
   <body>
-    <p>Test results are shown in browser console</p>
+    <p>Test results shown in the browser console</p>
   </body>
 </html>
